Patch 5.5.010 Problem:    Ctags freed a memory block twice when exiting.  When out of             memory, a misleading error message was given. Solution:   Update to ctags 3.3.2.  Also fixes a few other problems. (Darren             Hiebert) Files:      src/ctags/*

--- a/src/ctags/Makefile.bcc
+++ b/src/ctags/Makefile.bcc
@@ -17,9 +17,9 @@ LIB	= -L$(BCCLOC)\lib
 #	replace -1- with -2 to produce code for a 80286 or higher
 #	replace -1- with -3 to produce code for a 80386 or higher
 #	add -v for source debugging
-OPTIMIZE= -1- -Ox
+OPTIMIZE= -1- -O1
 
-CFLAGS	= -DMSDOS -mc -w-ccc -w-par -w-pia -w-rch -w-sus $(INC)
+CFLAGS	= -DMSDOS -mc -d -w-ccc -w-par -w-pia -w-rch -w-sus $(INC)
 LFLAGS	= $(LIB) $(EXTRA)
 
 ctags.exe: $(SOURCES) respbcc
