Patch 5.5.048 Problem:    HP-UX 11: Compiling doesn't work, because both string.h and 	    strings.h are included. (Squassabia) Solution:   The configure test for including both string.h and strings.h 	    must include <Xm/Xm.h> first, because it causes problems. Files:	    src/configure.in, src/configure, src/config.h.in

--- a/src/config.h.in
+++ b/src/config.h.in
@@ -274,6 +274,9 @@
 /* Define if you have the <strings.h> header file. */
 #undef HAVE_STRINGS_H
 
+/* Define if you have the <Xm/Xm.h> header file (only used by configure). */
+#undef HAVE_XM_XM_H
+
 /* Define if strings.h cannot be included when strings.h already is */
 #undef NO_STRINGS_WITH_STRING_H
 
