Patch 5.5.051 Problem:    Several Unix systems have a problem with the optimization limits 	    check in configure. Solution:   Removed the configure check, let the user add it manually in 	    Makefile or the enviroment. Files:	    src/configure.in, src/configure, src/Makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -407,6 +407,13 @@ include config.mk
 #CFLAGS = -g
 #CFLAGS = -O
 
+# Optimization limits - depends on the compiler.  Automatic check in configure
+# doesn't work very well, because many compilers only give a warning for
+# unrecognized arguments.
+#CFLAGS = -O -OPT:Olimit=2600
+#CFLAGS = -O -Olimit 2000
+#CFLAGS = -O -FOlimit,2000
+
 # Often used for GCC: mixed optimizing, lot of optimizing, debugging
 #CFLAGS = -g -O2 -fno-strength-reduce -Wall -Wshadow -Wmissing-prototypes
 #CFLAGS = -g -O2 -fno-strength-reduce -Wall -Wmissing-prototypes
