Patch 5.5.053 Problem:    Indenting is wrong after a function when 'cino' has "fs".  Another 	    problem when 'cino' has "{s". Solution:   Put line after closing "}" of a function at the left margin. 	    Apply ind_open_extra in the right way after a '{'. Files:	    src/misc1.c, src/testdir/test3.in, src/testdir/test3.ok

--- a/src/testdir/test3.in
+++ b/src/testdir/test3.in
@@ -643,6 +643,44 @@ void f()
 }
 
 STARTTEST
+:set cino={s,fs
+]]=/ foo
+ENDTEST
+
+void bar(void)
+{
+	static array[2][2] =
+	{
+		{ 1, 2 },
+		{ 3, 4 },
+	}
+
+	while (a)
+	{
+		foo(&a);
+	}
+
+	{
+		int a;
+		{
+			a = a + 1;
+		}
+	}
+	b = a;
+	}
+
+void func(void)
+	{
+	a = 1;
+	{
+		b = 2;
+	}
+	c = 3;
+	d = 4;
+	}
+/* foo */
+
+STARTTEST
 :set cino=
 /while
 ohere
