Patch 5.6.023 (extra) Problem:    Various warnings for the Ming compiler. Solution:   Changes to avoid the warnings. (Bill McCarthy) Files:	    src/ex_cmds.c, src/gui_w32.c, src/os_w32exe.c, src/os_win32.c, 	    src/syntax.c, src/vim.rc

--- a/src/vim.rc
+++ b/src/vim.rc
@@ -11,8 +11,12 @@
 
 #ifdef MING
 # include <windows.h>
-# define VS_FFI_FILEFLAGSMASK    0x0000003FL
-# define VOS__WINDOWS32          0x00000004L
+# ifndef VS_FFI_FILEFLAGSMASK
+#  define VS_FFI_FILEFLAGSMASK    0x0000003FL
+# endif
+# ifdef VOS__WINDOWS32
+#  define VOS__WINDOWS32          0x00000004L
+# endif
 #else
 # include <winver.h>
 #endif
