Patch 5.6.068 Problem:    Compiling the Perl interface doesn't work with Perl 5.6.0.             (Bernhard Rosenkraenzer) Solution:   Also check xs_apiversion for the version number when prepending             defines for PL_*. Files:      src/Makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -1627,9 +1627,10 @@ lint:
 #	$(CC) -c -I$(srcdir) $(ALL_CFLAGS) $(*F).c -o $@
 
 if_perl.c: if_perl.xs
-	$(PERL) -MConfig -e 'unless (exists $$Config{apiversion} && \
-	    $$Config{apiversion} >= 5.005) { for (qw(na defgv errgv)) { \
-		print "#define PL_$$_ $$_\n" }} ' > $@
+	$(PERL) -MConfig -e 'unless ( \
+	    (exists $$Config{apiversion} && $$Config{apiversion} >= 5.005) || \
+	    (exists $$Config{xs_apiversion} && $$Config{xs_apiversion} >= 5.005)) \
+	    { for (qw(na defgv errgv)) { print "#define PL_$$_ $$_\n" }}' > $@
 	$(PERL) $(PERLLIB)/ExtUtils/xsubpp -prototypes -typemap \
 	    $(PERLLIB)/ExtUtils/typemap if_perl.xs >> $@
 
