--- a/src/po/Makefile
+++ b/src/po/Makefile
@@ -1,9 +1,9 @@
 # Makefile for the Vim message translations.
 
 # TODO make this configurable
-LANGUAGES = af cs de es fr it ja ko pl tr zh_TW
-MOFILES = af.mo cs.mo de.mo es.mo fr.mo it.mo ja.mo ko.mo pl.mo tr.mo zh_TW.mo
-POFILES = af.po cs.po de.po es.po fr.po it.po ja.po ko.po pl.po tr.po zh_TW.po
+LANGUAGES = af cs de es fr it ja ko pl tr
+MOFILES = af.mo cs.mo de.mo es.mo fr.mo it.mo ja.mo ko.mo pl.mo tr.mo
+POFILES = af.po cs.po de.po es.po fr.po it.po ja.po ko.po pl.po tr.po
 
 PACKAGE = vim
 SHELL = /bin/sh
