Patch 6.0.003 Problem:    The configure check for ACLs on AIX doesn't work. Solution:   Fix the test program so that it compiles. (Tomas Ogren) Files:	    src/configure.in, src/auto/configure

--- a/src/configure.in
+++ b/src/configure.in
@@ -1760,12 +1760,12 @@ AC_TRY_LINK([
 # include <sys/access.h>
 #endif
 #define _ALL_SOURCE
-#ifdef HAVE_SYS_STAT_H
-# include <sys/stat.h>
-#endif
+
+#include <sys/stat.h>
+
 int aclsize;
 struct acl *aclent;], [aclsize = sizeof(struct acl);
-	aclent = malloc(aclsize);
+	aclent = (void *)malloc(aclsize);
 	statacl("foo", STX_NORMAL, aclent, aclsize);
 	],
 	AC_MSG_RESULT(yes); AC_DEFINE(HAVE_AIX_ACL),
