Patch 6.0.046 Problem:    When getrlimit() returns an 8 byte number the check for running 	    out of stack may fail. (Anthony Meijer) Solution:   Skip the stack check if the limit doesn't fit in a long. Files:	    src/auto/configure, src/config.h.in, src/configure.in, 	    src/os_unix.c

--- a/src/config.h.in
+++ b/src/config.h.in
@@ -86,6 +86,9 @@
 /* Define to `unsigned' if <sys/types.h> doesn't define.  */
 #undef dev_t
 
+/* Define to `unsigned long' if <sys/types.h> doesn't define.  */
+#undef rlim_t
+
 /* Define to `struct sigaltstack' if <signal.h> doesn't define.  */
 #undef stack_t
 
