Patch 6.0.053 (extra) Problem:    Various problems with QNX. Solution:   Minor fix for configure.  Switch on terminal clipboard support in 	    main.c.  Fix "pterm" mouse support.  os_qnx.c didn't build without 	    photon. (Julian Kinraid) Files:	    src/auto/configure, src/configure.in, src/gui_photon.c, 	    src/main.c, src/misc2.c, src/option.h, src/os_qnx.c, src/os_qnx.h, 	    src/syntax.c

--- a/src/configure.in
+++ b/src/configure.in
@@ -738,7 +738,7 @@ elif test "x$QNX" = "xyes" -a "x$with_x" = "xno" ; then
 
   case "$enable_gui" in
     no|No|NO)		AC_MSG_RESULT(no GUI support)
-			SKIP_QNX=YES ;;
+			SKIP_PHOTON=YES ;;
     yes|Yes|YES|"")	AC_MSG_RESULT(yes - automatic GUI support) ;;
     auto|Auto|AUTO|"")	AC_MSG_RESULT(auto - automatic GUI support) ;;
     photon|Photon|PHOTON)	AC_MSG_RESULT(Photon GUI support) ;;
