--- a/src/config.h.in
+++ b/src/config.h.in
@@ -332,3 +332,6 @@
 
 /* Define default global runtime path */
 #undef RUNTIME_GLOBAL
+
+/* Define name of who modified a released Vim */
+#undef MODIFIED_BY
